Some more logic and updated code